--- a/blog/infra/k8s/posts-srv.yaml
+++ b/blog/infra/k8s/posts-srv.yaml
@@ -1,17 +1,13 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: v1
+kind: Service
 metadata:
-  name: posts-depl
+  name: posts-srv
 spec:
-  replicas: 1
+  type: NodePort
   selector:
-    matchLabels:
-      app: posts
-  template:
-    metadata:
-      labels:
-        app: posts
-    spec:
-      containers:
-        - name: posts
-          image: caiopg/posts:latest
+    app: posts
+  ports: 
+    - name: posts
+      protocol: TCP
+      port: 4000
+      targetPort: 4000
